# build_system

./: BUILD  README.md  compilation_command.go
acceptance_tests/: BUILD  build_fuzzer_test.py
afl_driver/: BUILD  afl_driver_test.go
afl_driver/testdata/: Makefile  target.cpp
config/: BUILD  config.yaml
coverage/: BUILD  StandaloneFuzzTargetMain.c
deb_deps/: BUILD  deb_deps.cc  deb_deps_test.py  fetch_package_contents.sh
intercept/: BUILD.bazel  command_line.go  intercept.go  interceptor_service.go
intercept/internal/config/: BUILD.bazel  config.go  config_test.go  settings.go
intercept_support/: BUILD  cc_arg_info.h  compilation_command.cc  matcher.cc  matcher.h  patterns.h  replacer.cc  replacer.h  types.h
intercept_support/test/: compilation_command_test.cc  matcher_test.cc  replacer_test.cc
interceptor/: BUILD  __init__.py  commandline.py  grpc_server.py  intercept_settings.py  interceptor.py  main.py  requirements.txt  split_compile_command.py
interceptor/config/fuzzer/: default.yaml  libfuzzer.yaml
interceptor/test/: acceptance_test.py  build.sh  compilation_db_test.py  grpc_test.py  integration_test.py  intercept_settings_test.py  lint.sh  mock-cc  mock_cc_config.yaml  split_argv_test.py  test_fuzzer_config.yaml
preload_interceptor/: BUILD  exec_hooks.cc  intercept_settings.cc  intercept_settings.h
proto/: BUILD  intercept.pb.go  intercept.proto
replacer/: BUILD  compilation_command.cc  compilation_command.h  path.cc  path.h  replacer.cc  replacer.h
replacer/test/: compilation_command_test.cc  path_test.cc  replacer_test.cc
test/: BUILD.bazel  intercept_test.go
test/data/make/: Makefile
types/: BUILD.bazel  compilation_command.go
utility/: BUILD  filesystem.h  path.cc  path.h  utility.h
utility/test/: path_test.cc
