load("@io_bazel_rules_go//go:def.bzl", "go_test")

filegroup(
    name = "make_project",
    srcs = glob(["data/make/**"]),
)

filegroup(
    name = "build_sh_project",
    srcs = glob(["data/build_sh/**"]),
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["intercept_test.go"],
    data = [
        ":build_sh_project",
        ":make_project",
        "//build_system/config",
        "//build_system/intercept",
        "@afl",
        "@llvm",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//build_system/types:go_default_library",
        "@com_github_bazelbuild_rules_go//go/tools/bazel:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
